--- a/Homework/STA130_HW_1.ipynb
+++ b/Homework/STA130_HW_1.ipynb
@@ -5,7 +5,7 @@
    "id": "7d79d899",
    "metadata": {},
    "source": [
-    "# Coding Homework 1: [put your name here]\n",
+    "# Coding Homework 1: [gibbs]\n",
     "\n",
     "Go through this notebook, following the instructions! \n",
     "\n",
