--- a/Homework/STA130_HW_1.ipynb
+++ b/Homework/STA130_HW_1.ipynb
@@ -5,7 +5,7 @@
    "id": "7d79d899",
    "metadata": {},
    "source": [
-    "# Coding Homework 1: [put your name here]\n",
+    "# Coding Homework 1: [gibbs]\n",
     "\n",
     "Go through this notebook, following the instructions! \n",
     "\n",
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q1: your answer will be tested!\n",
+    "# Q1:c your answer will be tested!\n",
     "Q1 = None # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`\n",
     "# E.g., Q1 = 'A'"
    ]
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "# Q2: your answer will be tested!\n",
-    "Q2 = None # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
+    "Q2 = d # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
    ]
   },
   {
