--- a/Homework/STA130_HW_1.ipynb
+++ b/Homework/STA130_HW_1.ipynb
@@ -5,7 +5,7 @@
    "id": "7d79d899",
    "metadata": {},
    "source": [
-    "# Coding Homework 1: [put your name here]\n",
+    "# Coding Homework 1: [gibbs]\n",
     "\n",
     "Go through this notebook, following the instructions! \n",
     "\n",
@@ -331,7 +331,7 @@
    "id": "29c19d8c",
    "metadata": {},
    "source": [
-    "### Q1: When would `pd.read_csv(\"coffee_ratings.csv\")` not work?\n",
+    "### Q1:c When would `pd.read_csv(\"coffee_ratings.csv\")` not work?\n",
     "\n",
     "A. It will always work  \n",
     "B. When `import pandas` hasn't been previously run  \n",
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "# Q2: your answer will be tested!\n",
-    "Q2 = None # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
+    "Q2 = d # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
    ]
   },
   {
