--- a/Homework/STA130_HW_1.ipynb
+++ b/Homework/STA130_HW_1.ipynb
@@ -5,7 +5,7 @@
    "id": "7d79d899",
    "metadata": {},
    "source": [
-    "# Coding Homework 1: [put your name here]\n",
+    "# Coding Homework 1: [gibbs]\n",
     "\n",
     "Go through this notebook, following the instructions! \n",
     "\n",
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "# Q1: your answer will be tested!\n",
-    "Q1 = None # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`\n",
+    "Q1 = c # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`\n",
     "# E.g., Q1 = 'A'"
    ]
   },
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "# Q2: your answer will be tested!\n",
-    "Q2 = None # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
+    "Q2 = d # Assign either 'A' or 'B' or 'C' or 'D' to `Q1` instead of `None`"
    ]
   },
   {
@@ -445,7 +445,7 @@
    "outputs": [],
    "source": [
     "# Q3: your answer will be tested!\n",
-    "Q3 = None # Assign an integer number such as 18, 36, or 1338\n",
+    "Q3 =  # Assign an integer number such as 18, 36, or 1338\n",
     "# E.g., Q1 = 18 \n",
     "# (as opposed to '18')"
    ]
